--- a/Avalonia.HotMarkdown.Demo/MainWindow.axaml
+++ b/Avalonia.HotMarkdown.Demo/MainWindow.axaml
@@ -4,6 +4,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Avalonia.HotMarkdown.Demo.MainWindow"
+		xmlns:HotMarkdown="clr-namespace:Avalonia.HotMarkdown;assembly=Avalonia.HotMarkdown"
         Title="Avalonia.HotMarkdown.Demo">
-    Welcome to Avalonia!
+	<Panel>
+		<HotMarkdown:HotMarkdownEditor/>
+	</Panel>
 </Window>
