--- a/AvaloniaHotMarkdown.Demo/MainWindow.axaml
+++ b/AvaloniaHotMarkdown.Demo/MainWindow.axaml
@@ -4,7 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Avalonia.HotMarkdown.Demo.MainWindow"
-		xmlns:HotMarkdown="clr-namespace:Avalonia.HotMarkdown;assembly=Avalonia.HotMarkdown"
+		xmlns:HotMarkdown="clr-namespace:AvaloniaHotMarkdown;assembly=AvaloniaHotMarkdown"
         Title="Avalonia.HotMarkdown.Demo">
 	<Panel>
 		<HotMarkdown:HotMarkdownEditor Padding="10"/>
