--- a/AvaloniaHotMarkdown.Demo/App.axaml
+++ b/AvaloniaHotMarkdown.Demo/App.axaml
@@ -1,6 +1,6 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="Avalonia.HotMarkdown.Demo.App"
+             x:Class="AvaloniaHotMarkdown.Demo.App"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
