--- a/AvaloniaHotMarkdown.Demo/MainWindow.axaml
+++ b/AvaloniaHotMarkdown.Demo/MainWindow.axaml
@@ -3,9 +3,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="Avalonia.HotMarkdown.Demo.MainWindow"
+        x:Class="AvaloniaHotMarkdown.Demo.MainWindow"
 		xmlns:HotMarkdown="clr-namespace:AvaloniaHotMarkdown;assembly=AvaloniaHotMarkdown"
-        Title="Avalonia.HotMarkdown.Demo">
+        Title="AvaloniaHotMarkdown.Demo">
 	<Panel>
 		<HotMarkdown:HotMarkdownEditor Padding="10"/>
 	</Panel>
